--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
 
+{
+  "name": "my_first_midway_project",
+  "version": "1.0.0",
+  "description": "{{description}}",
+  "private": true,
+  "dependencies": {
+    "lodash": "*"
+  },
+  "scripts": {
+    "build": "true"
+  }
+}
